@@ -15,6 +15,7 @@ Version 1.0.11 to be released
 - Bug #692: CHtml::listOptions() ignores the HTML options when handling nested options (Qiang)
 - Bug #710: CRequiredValidator does not work as expected when its requiredValue is not null (Qiang)
 - Bug: CQueue::peek() should return the first item in the queue (Qiang)
+- Enh #629: Added support for specifying shell command search path via an environment variable YIIC_SHELL_COMMAND_PATH (Qiang)
 - Enh #643: Enhanced CAccessControlFilter::expression, COutputCache::varyByExpression and CExpressionDependency::expression so that they can use PHP callback (Qiang)
 - Enh #665: Added support for using CStarRating to collect tabular input (Qiang)
 - Enh #672: Added Italian translation of error views (Qiang)
